changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Improve quest edition, now can add or remove steps. Can add new quests.
Nicolas Weeger 2010-05-16

Indicate quest end steps. Enable edition of the 'can restart?' flag.
Nicolas Weeger 2010-05-16

Remove unused class.
Nicolas Weeger 2010-05-16

Fix crash if wanting to start an unknown quest.
Nicolas Weeger 2010-05-16

Highlight rules when the same token.
Nicolas Weeger 2010-05-15

Preliminary message file (.msg) support. No edition yet.
Nicolas Weeger 2010-05-15

Update the tree if the quest code changes. Enables quest step edition.
Nicolas Weeger 2010-05-15

Quest edition, not complete but some fields already.
Nicolas Weeger 2010-05-15

Show existing quests, and their various steps.
Nicolas Weeger 2010-05-15

Fix typedef definition issue when building CRE.
Nicolas Weeger 2010-05-15

Make various pointers const.
Nicolas Weeger 2010-05-15

Correctly initialize variable. Make pointers const.
Nicolas Weeger 2010-05-15

Clean code.
Nicolas Weeger 2010-05-13

Correctly initialize variables.
Nicolas Weeger 2010-05-13

Make buffer bigger to avoid truncation, warn if still truncation.
Nicolas Weeger 2010-05-13

Remove unused code.
Nicolas Weeger 2010-05-09

Make variables 'const'.
Nicolas Weeger 2010-05-09

Expose rt_xxx to Python scripts through 'Crossfire.ReplyType'.
Nicolas Weeger 2010-05-08

Add 'rt_say', give explicit values. Extract texts to function.
Nicolas Weeger 2010-05-08

Add Crossfire.AddReply, Crossfire.SetPlayerMessage and Crossfire.NPCSay wrappers
to the Python plugin.
Nicolas Weeger 2010-05-08
